force-app/main/default/objects/Rent__c/Rent__c.object-meta.xml
<CustomObject>
    <label>家賃</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>家賃名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>