force-app/main/default/objects/Rent__c/fields/ActualLeaveDate__c.field-meta.xml
<CustomField>
    <fullName>ActualLeaveDate__c</fullName>
    <label>実退去日</label>
    <type>Date</type>
</CustomField>