force-app/main/default/objects/Rent__c/fields/AdministrativeFeeRemittee__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeFeeRemittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事務送金先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Rent_AccountRelation4</relationshipName>
    <type>Lookup</type>
</CustomField>