force-app/main/default/objects/Rent__c/fields/AdministrativeFeeTaxType__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeFeeTaxType__c</fullName>
    <label>事務税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>課税売上5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>