force-app/main/default/objects/Rent__c/fields/AgencyBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>AgencyBillingAmount__c</fullName>
    <label>仲介請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>