force-app/main/default/objects/Rent__c/fields/AgencyCommission__c.field-meta.xml
<CustomField>
    <fullName>AgencyCommission__c</fullName>
    <label>仲介手数料入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>