force-app/main/default/objects/Rent__c/fields/AgencyCommissionTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>AgencyCommissionTaxCategory__c</fullName>
    <label>仲介手数料税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>課税売上5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>