force-app/main/default/objects/Rent__c/fields/ApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedAmount__c</fullName>
    <label>※超過社員了承金額（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>