force-app/main/default/objects/Rent__c/fields/BillingDone__c.field-meta.xml
<CustomField>
    <fullName>BillingDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求済</label>
    <type>Checkbox</type>
</CustomField>