force-app/main/default/objects/Rent__c/fields/BillingMonth__c.field-meta.xml
<CustomField>
    <fullName>BillingMonth__c</fullName>
    <label>請求月</label>
    <type>Date</type>
</CustomField>