force-app/main/default/objects/Rent__c/fields/CommonChargeRemittee__c.field-meta.xml
<CustomField>
    <fullName>CommonChargeRemittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>共益費送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>