force-app/main/default/objects/Rent__c/fields/ConsignmentBillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentBillingStartDate__c</fullName>
    <label>委託料請求開始日</label>
    <type>Date</type>
</CustomField>