force-app/main/default/objects/Rent__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <label>契約終期</label>
    <type>Date</type>
</CustomField>