force-app/main/default/objects/Rent__c/fields/ContractMoneyIncrease__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyIncrease__c</fullName>
    <label>ペット飼育の契約金増額</label>
    <length>255</length>
    <type>Text</type>
</CustomField>