force-app/main/default/objects/Rent__c/fields/ContractOther1Remittee__c.field-meta.xml
<CustomField>
    <fullName>ContractOther1Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約その他1送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>