force-app/main/default/objects/Rent__c/fields/ContractOther2Remittee__c.field-meta.xml
<CustomField>
    <fullName>ContractOther2Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約その他2送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>