force-app/main/default/objects/Rent__c/fields/ContractOther2Vat__c.field-meta.xml
<CustomField>
    <fullName>ContractOther2Vat__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>契約その他２消費税</label>
    <type>Text</type>
</CustomField>