force-app/main/default/objects/Rent__c/fields/ContractOther3BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractOther3BillingAmount__c</fullName>
    <label>契約その他3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>