force-app/main/default/objects/Rent__c/fields/ContractOther3Vat__c.field-meta.xml
<CustomField>
    <fullName>ContractOther3Vat__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>契約その他３消費税</label>
    <type>Text</type>
</CustomField>