force-app/main/default/objects/Rent__c/fields/ContractOther4BillingAmountTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ContractOther4BillingAmountTaxCategory__c</fullName>
    <label>契約その他4税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>