force-app/main/default/objects/Rent__c/fields/ContractOther4Title__c.field-meta.xml
<CustomField>
    <fullName>ContractOther4Title__c</fullName>
    <label>契約その他4タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>