force-app/main/default/objects/Rent__c/fields/ContractOther5BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractOther5BillingAmount__c</fullName>
    <label>契約その他5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>