force-app/main/default/objects/Rent__c/fields/ContractOther5Remittee__c.field-meta.xml
<CustomField>
    <fullName>ContractOther5Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約その他5送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation9</relationshipName>
    <type>Lookup</type>
</CustomField>