force-app/main/default/objects/Rent__c/fields/ContractRepeatBilling2TaxIncludedAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractRepeatBilling2TaxIncludedAmount__c</fullName>
    <label>契約繰返し請求２税込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>