force-app/main/default/objects/Rent__c/fields/DailyRateCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>DailyRateCommonCharge__c</fullName>
    <label>日割共益費入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>