force-app/main/default/objects/Rent__c/fields/DailyRateFractionTreatmentAmount__c.field-meta.xml
<CustomField>
    <fullName>DailyRateFractionTreatmentAmount__c</fullName>
    <label>日割端数の扱い（金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>