force-app/main/default/objects/Rent__c/fields/DailyRateParkingFeeFraction2__c.field-meta.xml
<CustomField>
    <fullName>DailyRateParkingFeeFraction2__c</fullName>
    <label>日割駐車場賃料分数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>