force-app/main/default/objects/Rent__c/fields/DailyRateRentFraction__c.field-meta.xml
<CustomField>
    <fullName>DailyRateRentFraction__c</fullName>
    <label>日割家賃分数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>