force-app/main/default/objects/Rent__c/fields/DeemedRent__c.field-meta.xml
<CustomField>
    <fullName>DeemedRent__c</fullName>
    <label>みなし家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>