force-app/main/default/objects/Rent__c/fields/DepositBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositBillingAmount__c</fullName>
    <label>敷金請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>