force-app/main/default/objects/Rent__c/fields/DepositTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>DepositTaxCategory__c</fullName>
    <label>敷金税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>課税売上5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>