force-app/main/default/objects/Rent__c/fields/DifferenceDeposit__c.field-meta.xml
<CustomField>
    <fullName>DifferenceDeposit__c</fullName>
    <label>差額敷金入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>