force-app/main/default/objects/Rent__c/fields/DifferenceDepositBilling__c.field-meta.xml
<CustomField>
    <fullName>DifferenceDepositBilling__c</fullName>
    <label>差額敷金請求</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>