force-app/main/default/objects/Rent__c/fields/DifferenceDepositMonths__c.field-meta.xml
<CustomField>
    <fullName>DifferenceDepositMonths__c</fullName>
    <label>差額敷金ヶ月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>