force-app/main/default/objects/Rent__c/fields/FifthMonthsFromContractDate__c.field-meta.xml
<CustomField>
    <fullName>FifthMonthsFromContractDate__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>契約日から5ヶ月</label>
    <type>Text</type>
</CustomField>