force-app/main/default/objects/Rent__c/fields/FreeRentEndDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRentEndDate__c</fullName>
    <label>フリーレント終期</label>
    <type>Date</type>
</CustomField>