force-app/main/default/objects/Rent__c/fields/GarageBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>GarageBillingAmount__c</fullName>
    <label>駐車場請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>