force-app/main/default/objects/Rent__c/fields/IncreasedCost__c.field-meta.xml
<CustomField>
    <fullName>IncreasedCost__c</fullName>
    <label>ペット飼育の増額費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>