force-app/main/default/objects/Rent__c/fields/IsAutomaticUpdateProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsAutomaticUpdateProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動更新処理済みフラグ</label>
    <type>Checkbox</type>
</CustomField>