force-app/main/default/objects/Rent__c/fields/ManagementChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ManagementChargeTaxCategory__c</fullName>
    <label>管理費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>