force-app/main/default/objects/Rent__c/fields/MaximumRentAmount__c.field-meta.xml
<CustomField>
    <fullName>MaximumRentAmount__c</fullName>
    <label>上限家賃額（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>