force-app/main/default/objects/Rent__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <label>【マンスリー】</label>
    <length>255</length>
    <type>Text</type>
</CustomField>