force-app/main/default/objects/Rent__c/fields/MonthlyVariableCost1Remittee__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost1Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>月次変動費1送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation14</relationshipName>
    <type>Lookup</type>
</CustomField>