force-app/main/default/objects/Rent__c/fields/MonthlyVariableCost1Title__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost1Title__c</fullName>
    <label>月次変動費1タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>