force-app/main/default/objects/Rent__c/fields/MonthlyVariableCost3Remittee__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost3Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>月次変動費3送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation16</relationshipName>
    <type>Lookup</type>
</CustomField>