force-app/main/default/objects/Rent__c/fields/MonthlyVariableCost3TitleTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost3TitleTaxCategory__c</fullName>
    <label>月次変動費3タイトル税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>