force-app/main/default/objects/Rent__c/fields/MonthlyVariableCost4Remittee__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost4Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>月次変動費4送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation17</relationshipName>
    <type>Lookup</type>
</CustomField>