force-app/main/default/objects/Rent__c/fields/NewRentConfirm__c.field-meta.xml
<CustomField>
    <fullName>NewRentConfirm__c</fullName>
    <label>新家賃確認</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>