force-app/main/default/objects/Rent__c/fields/OtherBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingAmount__c</fullName>
    <label>その他請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>