force-app/main/default/objects/Rent__c/fields/OtherExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>OtherExpenseAmount__c</fullName>
    <label>その他月次費用金額(円)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>