force-app/main/default/objects/Rent__c/fields/OtherExpenseBurdenCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherExpenseBurdenCategory__c</fullName>
    <label>その他月次費用負担区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>