force-app/main/default/objects/Rent__c/fields/OtherMonth__c.field-meta.xml
<CustomField>
    <fullName>OtherMonth__c</fullName>
    <label>その他月</label>
    <type>Date</type>
</CustomField>