force-app/main/default/objects/Rent__c/fields/OwnerBirthday__c.field-meta.xml
<CustomField>
    <fullName>OwnerBirthday__c</fullName>
    <label>賃貸人 代表者の生年月日</label>
    <type>Date</type>
</CustomField>