force-app/main/default/objects/Rent__c/fields/ParkingFeeRemittee__c.field-meta.xml
<CustomField>
    <fullName>ParkingFeeRemittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>駐車場代送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>