force-app/main/default/objects/Rent__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>支払日</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>