force-app/main/default/objects/Rent__c/fields/PaymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentEndDate__c</fullName>
    <label>支払終了年月</label>
    <type>Date</type>
</CustomField>