force-app/main/default/objects/Rent__c/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <label>支払開始年月</label>
    <type>Date</type>
</CustomField>