force-app/main/default/objects/Rent__c/fields/RealEstateName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipName>RentRealEstateRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>