force-app/main/default/objects/Rent__c/fields/RealEstateNameKana__c.field-meta.xml
<CustomField>
    <fullName>RealEstateNameKana__c</fullName>
    <formula>RealEstateName__r.Kana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件名カナ</label>
    <type>Text</type>
</CustomField>