force-app/main/default/objects/Rent__c/fields/RenewalDailyRateManagementVat__c.field-meta.xml
<CustomField>
    <fullName>RenewalDailyRateManagementVat__c</fullName>
    <label>更新日割管理消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>