force-app/main/default/objects/Rent__c/fields/RenewalDailyRateParkingVat__c.field-meta.xml
<CustomField>
    <fullName>RenewalDailyRateParkingVat__c</fullName>
    <label>更新日割駐車消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>