force-app/main/default/objects/Rent__c/fields/RenewalDailyRateRentVat__c.field-meta.xml
<CustomField>
    <fullName>RenewalDailyRateRentVat__c</fullName>
    <label>更新日割家賃消費税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>