force-app/main/default/objects/Rent__c/fields/RenewalFeeIs__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeIs__c</fullName>
    <label>更新料有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>