force-app/main/default/objects/Rent__c/fields/RentBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>RentBillingAmount__c</fullName>
    <label>家賃請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>