force-app/main/default/objects/Rent__c/fields/RentFixedCostAmount4__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostAmount4__c</fullName>
    <label>（不要）月額固定費4_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>