force-app/main/default/objects/Rent__c/fields/RentFixedCostExpenseItems1__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostExpenseItems1__c</fullName>
    <label>月額固定費1_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>