force-app/main/default/objects/Rent__c/fields/RentFixedCostExpenseItems3__c.field-meta.xml
<CustomField>
    <fullName>RentFixedCostExpenseItems3__c</fullName>
    <label>月額固定費3_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>