force-app/main/default/objects/Rent__c/fields/RentId__c.field-meta.xml
<CustomField>
    <fullName>RentId__c</fullName>
    <externalId>true</externalId>
    <label>家賃ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>