force-app/main/default/objects/Rent__c/fields/RentPaymentDueDateTerms__c.field-meta.xml
<CustomField>
    <fullName>RentPaymentDueDateTerms__c</fullName>
    <label>家賃支払期日_条</label>
    <type>Date</type>
</CustomField>