force-app/main/default/objects/Rent__c/fields/Repetition2Total__c.field-meta.xml
<CustomField>
    <fullName>Repetition2Total__c</fullName>
    <label>繰返し２の合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>