force-app/main/default/objects/Rent__c/fields/ResidentIncidental1__c.field-meta.xml
<CustomField>
    <fullName>ResidentIncidental1__c</fullName>
    <label>入居者付帯１</label>
    <type>TextArea</type>
</CustomField>