force-app/main/default/objects/Rent__c/fields/ResidentIncidental2__c.field-meta.xml
<CustomField>
    <fullName>ResidentIncidental2__c</fullName>
    <label>入居者付帯２</label>
    <type>TextArea</type>
</CustomField>