force-app/main/default/objects/Rent__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <formula>RealEstateName__r.ContractorName__r.LastName  +  RealEstateName__r.ContractorName__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居者名</label>
    <type>Text</type>
</CustomField>