force-app/main/default/objects/Rent__c/fields/RewardBillingAmount__c.field-meta.xml
<CustomField>
    <fullName>RewardBillingAmount__c</fullName>
    <label>礼金請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>