force-app/main/default/objects/Rent__c/fields/RewardMonth__c.field-meta.xml
<CustomField>
    <fullName>RewardMonth__c</fullName>
    <label>礼金月</label>
    <type>Date</type>
</CustomField>