force-app/main/default/objects/Rent__c/fields/RewardTitle__c.field-meta.xml
<CustomField>
    <fullName>RewardTitle__c</fullName>
    <label>礼金タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>