force-app/main/default/objects/Rent__c/fields/SeasonRentStartDate__c.field-meta.xml
<CustomField>
    <fullName>SeasonRentStartDate__c</fullName>
    <label>季節家賃開始</label>
    <type>Date</type>
</CustomField>