force-app/main/default/objects/Rent__c/fields/SeasonVariableCost2Title__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost2Title__c</fullName>
    <label>季節変動費2タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>