force-app/main/default/objects/Rent__c/fields/SeasonVariableCost3Remittee__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost3Remittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>季節変動費3送金先</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>RentBankAccountRelation13</relationshipName>
    <type>Lookup</type>
</CustomField>