force-app/main/default/objects/Rent__c/fields/SecurityDepositRemittee__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositRemittee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>差敷金送金先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Rent_AccountRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>