force-app/main/default/objects/Rent__c/fields/SpecialContract1__c.field-meta.xml
<CustomField>
    <fullName>SpecialContract1__c</fullName>
    <label>特約条項１</label>
    <type>TextArea</type>
</CustomField>