force-app/main/default/objects/Rent__c/fields/SpecialContract2__c.field-meta.xml
<CustomField>
    <fullName>SpecialContract2__c</fullName>
    <label>特約条項２</label>
    <type>TextArea</type>
</CustomField>