force-app/main/default/objects/Rent__c/fields/StandardRent__c.field-meta.xml
<CustomField>
    <fullName>StandardRent__c</fullName>
    <label>基準家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>