force-app/main/default/objects/Rent__c/fields/ThisMonthDailyRateMethod__c.field-meta.xml
<CustomField>
    <fullName>ThisMonthDailyRateMethod__c</fullName>
    <label>当月日割計算方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>