force-app/main/default/objects/Rent__c/fields/TotalBilling__c.field-meta.xml
<CustomField>
    <fullName>TotalBilling__c</fullName>
    <label>総請求合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>